# marqo-haystack

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish_to_pypi.yml  test.yml
docs/marqo_haystack/: document_store.html  errors.html  index.html  retriever.html
example/: example.py
src/marqo_haystack/: __about__.py  __init__.py  document_store.py  errors.py  retriever.py
tests/: test_document_store.py
